--- a/translations/kangyur/translations/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
+++ b/translations/kangyur/translations/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
@@ -32,7 +32,7 @@
           Jun.</sponsor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -169,6 +169,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-01-23T15:09:53.814Z" type="text-version" status="1.0.0" xml:id="UT22084-103-004-724">
                     <desc>First published version</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-01-24T15:07:36.902Z" type="text-version" status="1.0.1" xml:id="UT22084-103-004-725">
+                    <desc>Updated typo.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -439,7 +442,7 @@
               rdzong</foreign>).</note> This latter point is notable because in the centuries after
             the Old Narthang manuscript Kangyur was compiled, two major recensional branches
             developed, the Tshalpa line and the Thempangma line, with their own distinct aspects. In
-            consulting both the Lithang and Lhodzong, members of the latter and former respectively,
+            consulting both the Lithang and Lhodzong, members of the former and latter respectively,
             Situ Paṇchen creates a hybrid collection with features from both lines. He tells us that
             based on these other Kangyur collections he was able to correct minor errors like
             spelling mistakes and misordered pages, but that he also inserted “authentic sūtras and
@@ -1833,7 +1836,7 @@
               department—including the daily rations of food and drink, occasional feasts, and
               bonuses for their enjoyment, all of which was of high quality and bountiful beyond
               accounting—as well as the cost of the materials like woodblocks, was reckoned as 7,622
-              measures of good tea.<note place="end" xml:id="UT22084-103-004-285"> Tib. <foreign xml:lang="Bo-Ltn" type="quote">bzang ja sbob rtse</foreign>. Bricks of tea were
+              cases of good tea.<note place="end" xml:id="UT22084-103-004-285"> Tib. <foreign xml:lang="Bo-Ltn" type="quote">bzang ja sbob rtse</foreign>. Bricks of tea were
                 packed in long bamboo baskets known as <foreign xml:lang="Ja-Ltn" type="term">japobtse</foreign> or <foreign xml:lang="Ja-Ltn" type="term">jakhordruk</foreign>. The value of these were used as the benchmark for calculating
                 wages and expenses. See Chaix, p. 67 n.7.</note> This demonstrates how the
               outstretched hand of constant and unfailing great generosity rendered everyone happy,
