--- a/translations/kangyur/placeholders/084-001_toh479-the_compendium_of_realities.xml
+++ b/translations/kangyur/placeholders/084-001_toh479-the_compendium_of_realities.xml
@@ -19,12 +19,12 @@
                 <consultant role="projectManager" xml:id="UT22084-084-001-3">Steven Weinberger</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-084-001"/>
                 <date/>
             </publicationStmt>
@@ -60,6 +60,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-12T11:07:30.946Z" type="text-version" status="0.0.6" xml:id="UT22084-084-001-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-25T08:55:26.483Z" type="translation-status" status="3" xml:id="UT22084-084-001-11">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-25T08:55:26.483Z" type="text-version" status="0.0.7" xml:id="UT22084-084-001-12">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
