--- a/translations/tengyur/placeholders/035-013_toh1808-dpal_gsang_ba_dus_pai_rdzogs_rim_mthar_phyin_pa.xml
+++ b/translations/tengyur/placeholders/035-013_toh1808-dpal_gsang_ba_dus_pai_rdzogs_rim_mthar_phyin_pa.xml
@@ -10,14 +10,19 @@
                 <title xml:lang="bo" type="longTitle">དཔལ་གསང་བ་འདུས་པའི་རྫོགས་རིམ་མཐར་ཕྱིན་པ་བཞུགས།</title>
                 <title xml:lang="Bo-Ltn" type="longTitle">dpal gsang ba 'dus pa'i rdzogs rim mthar phyin pa bzhugs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-035-013"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1808" type="text">
                     <ref>Toh 1808</ref>
                     <biblScope>ff. 118v-121r</biblScope>
-                    <author ref="eft:entity-17865" xml:lang="Sa-Ltn">Āryadeva</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-035-013-1">Āryadeva</author>
                     <location work="UT23703" count-pages="6">
                         <volume number="35" start-page="236" end-page="241"/>
                     </location>
@@ -25,10 +30,21 @@
                     <idno source-id="O1JC76301JC8369" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-25T10:48:14.65Z" user="john">25/11/2021 10:48:14</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="import" xml:id="UT23703-035-013-2" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-035-013-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-25T11:07:21.087Z" type="translation-status" status="3" xml:id="UT23703-035-013-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-25T11:07:21.087Z" type="text-version" status="0.0.1" xml:id="UT23703-035-013-5">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
