--- a/translations/kangyur/translations/090-003_toh559-the_great_peahen_queen_of_incantations.xml
+++ b/translations/kangyur/translations/090-003_toh559-the_great_peahen_queen_of_incantations.xml
@@ -26,9 +26,10 @@
                 <editor role="copyEditor" xml:id="UT22084-090-003-1818">Laura Goetz</editor>
                 <editor role="TEImarkupEditor" xml:id="UT22084-090-003-1819">Martina Cotter</editor>
                 <editor role="finalReviewer" xml:id="UT22084-090-003-1844">Rory Lindsay</editor>
+                <sponsor xml:id="UT22084-090-003-1862">DJKR, Herlintje, Hadi Widjaja, Lina Herlintje, Ocean Widjaja, Asia Widjaja, Star Widjaja and Gold Widjaja</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -127,6 +128,15 @@
                 <change who="#martina-cotter" when="2023-10-20T15:08:00.301Z" type="text-version" status="1.0.3" xml:id="UT22084-090-003-1861">
                     <desc>Added pending links.</desc>
                 </change>
+                <change who="#cabie-sim" when="2023-12-01T02:12:02.828Z" type="text-version" status="1.0.4" xml:id="UT22084-090-003-1863">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-01-16T02:52:02.125Z" type="text-version" status="1.0.5" xml:id="UT22084-090-003-1864">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-01-25T11:52:19.617Z" type="text-version" status="1.0.6" xml:id="UT22084-090-003-1866">
+                    <desc>added sponsorship acknowledgement.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -166,6 +176,10 @@
                 <milestone unit="chunk" xml:id="UT22084-090-003-3"/>
                 <p tid="5">The translation was completed under the patronage and supervision of
                     84000: Translating the Words of the Buddha.</p>
+                <milestone unit="chunk" xml:id="UT22084-090-003-1865"/>
+                <p type="sponsor" tid="313">The translation of this text has been made possible through
+                    the generous sponsorship of DJKR, Herlintje, Hadi Widjaja, Lina Herlintje, Ocean
+                    Widjaja, Asia Widjaja, Star Widjaja and Gold Widjaja.</p>
             </div>
             <div type="introduction">
                 <head type="introduction" tid="8">Introduction</head>
@@ -4260,7 +4274,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">ṛṣi</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">drang srong</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དྲང་སྲོང་།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>An ancient Indian spiritual title for divinely inspired
                                     individuals credited with creating the foundations for Indian
                                     culture. The term can also be used generically to refer to a
