--- a/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
+++ b/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-094-020-29">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-094-020"/>
                 <date/>
             </publicationStmt>
@@ -102,6 +102,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-24T09:16:25.132Z" type="text-version" status="0.0.12" xml:id="UT22084-094-020-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-25T13:10:06.734Z" type="translation-status" status="2.a" xml:id="UT22084-094-020-35">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-25T13:10:06.734Z" type="text-version" status="0.0.13" xml:id="UT22084-094-020-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
