--- a/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
+++ b/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
@@ -16,14 +16,15 @@
                 <author role="translatorEng" xml:id="UT22084-072-021-6">George FitzHerbert</author>
                 <editor role="projectEditor" xml:id="UT22084-072-021-25">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-072-021-36">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-021-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-072-021"/>
                 <date/>
             </publicationStmt>
@@ -98,6 +99,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-23T16:46:53.81Z" type="text-version" status="0.0.13" xml:id="UT22084-072-021-41">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T11:00:01.399Z" type="text-version" status="0.0.14" xml:id="UT22084-072-021-51">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-29T10:05:19.77Z" type="translation-status" status="2.b" xml:id="UT22084-072-021-52">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-29T10:05:19.77Z" type="text-version" status="0.0.15" xml:id="UT22084-072-021-53">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
