--- a/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
+++ b/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
@@ -12,13 +12,14 @@
                 <author role="translatorEng" xml:id="UT22084-072-022-2">Elizabeth Angowski</author>
                 <editor role="projectEditor" xml:id="UT22084-072-022-15">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-072-022-22">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-022-32">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-072-022"/>
                 <date/>
             </publicationStmt>
@@ -87,6 +88,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-23T16:48:09.423Z" type="text-version" status="0.0.11" xml:id="UT22084-072-022-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T10:59:37.18Z" type="text-version" status="0.0.12" xml:id="UT22084-072-022-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-29T10:08:03.335Z" type="translation-status" status="2.b" xml:id="UT22084-072-022-34">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-29T10:08:03.335Z" type="text-version" status="0.0.13" xml:id="UT22084-072-022-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
