--- a/translations/tengyur/placeholders/035-013_toh1808-dpal_gsang_ba_dus_pai_rdzogs_rim_mthar_phyin_pa.xml
+++ b/translations/tengyur/placeholders/035-013_toh1808-dpal_gsang_ba_dus_pai_rdzogs_rim_mthar_phyin_pa.xml
@@ -4,18 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">Bringing the Perfection Stage of the Glorious Secret Assembly Tantra to Completion</title>
                 <title xml:lang="bo" type="mainTitle">དཔལ་གསང་བ་འདུས་པའི་རྫོགས་རིམ་མཐར་ཕྱིན་པ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">dpal gsang ba 'dus pa'i rdzogs rim mthar phyin pa/</title>
-                <title xml:lang="en" type="mainTitle">Bringing the Perfection Stage of the Glorious Secret Assembly Tantra to Completion</title>
                 <title xml:lang="bo" type="longTitle">དཔལ་གསང་བ་འདུས་པའི་རྫོགས་རིམ་མཐར་ཕྱིན་པ་བཞུགས།</title>
                 <title xml:lang="Bo-Ltn" type="longTitle">dpal gsang ba 'dus pa'i rdzogs rim mthar phyin pa bzhugs/</title>
+                <author role="translatorMain" xml:id="UT23703-035-013-6">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT23703-035-013-7">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-035-013"/>
             </publicationStmt>
             <sourceDesc>
@@ -43,6 +45,15 @@
                 </change>
                 <change who="#line-tofte" when="2024-01-25T11:07:21.087Z" type="text-version" status="0.0.1" xml:id="UT23703-035-013-5">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-25T11:07:53.586Z" type="text-version" status="0.0.2" xml:id="UT23703-035-013-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-29T10:17:16.284Z" type="translation-status" status="2.h" xml:id="UT23703-035-013-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-29T10:17:16.284Z" type="text-version" status="0.0.3" xml:id="UT23703-035-013-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
