--- a/translations/kangyur/placeholders/072-034_toh334-the_sutra_of_nandika.xml
+++ b/translations/kangyur/placeholders/072-034_toh334-the_sutra_of_nandika.xml
@@ -4,22 +4,24 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dga' ba can gyi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Nandikasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Nandika</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dga' ba can gyi mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Nandikasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dga' ba can gyi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryanandikasūtra</title>
-                <author role="translatorMain" xml:id="UT22084-072-034-1"/>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dga' ba can gyi mdo</title>
+                <author role="translatorMain" xml:id="UT22084-072-034-1">Pema Yeshé Dé Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-072-034-2">Giuliano Francisco Proença</consultant>
                 <author role="translatorEng" xml:id="UT22084-072-034-3">Giuliano Francisco Proença</author>
                 <editor role="reviser" xml:id="UT22084-072-034-4">Daniela Espíndola</editor>
+                <editor role="copyEditor" xml:id="UT22084-072-034-22">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-034-23">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-072-034"/>
                 <date/>
             </publicationStmt>
@@ -73,6 +75,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-19T10:29:13.066Z" type="text-version" status="0.0.8" xml:id="UT22084-072-034-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T10:34:59.262Z" type="text-version" status="0.0.9" xml:id="UT22084-072-034-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-29T10:40:04.647Z" type="translation-status" status="2.d" xml:id="UT22084-072-034-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-29T10:40:04.647Z" type="text-version" status="0.0.10" xml:id="UT22084-072-034-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
