--- a/translations/kangyur/translations/091-072_toh674,849-the_aparimitayurjnana_sutra_1.xml
+++ b/translations/kangyur/translations/091-072_toh674,849-the_aparimitayurjnana_sutra_1.xml
@@ -33,7 +33,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-072-430">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.19 <date>2023</date>
+                <edition>v 1.1.20 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -240,6 +240,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-23T21:25:14.87Z" type="text-version" status="1.1.19" xml:id="UT22084-091-072-487">
                     <desc>updated ellipsis.</desc>
+                </change>
+                <change who="#john" when="2024-01-29T14:15:57.929Z" type="text-version" status="1.1.20" xml:id="UT22084-091-072-488">
+                    <desc>Corrected reference to n. 45.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -695,7 +698,7 @@
                         Dolpopa.<note place="end" xml:id="UT22084-091-072-381">See Khomthar Jamlö (2014), p. 22.</note> In the early seventeenth century, 
                         Amé Zhap Ngawang Kunga Sonam mentions the same names,<note place="end" xml:id="UT22084-091-072-382">See Khomthar Jamlö (2014), p. 42.</note> and his contemporary 
                         Tāranātha brings up the latter two, as well as mentioning Patsap, in his discussion of the translation of the verbs used in their 
-                        translation of <ptr target="#UT22084-091-072-79"/>.<note place="end" xml:id="UT22084-091-072-383">See <ptr target="#UT22084-091-072-80"/>. Tāranātha’s 
+                        translation of <ptr target="#UT22084-091-072-79"/>.<note place="end" xml:id="UT22084-091-072-383">See <ptr target="#UT22084-091-072-368"/>. Tāranātha’s 
                             comments can be seen in Khomthar Jamlö (2014), p. 65.</note> These translations appear no longer to exist, but confirmation would require further research. 
                         The balance of the existing evidence, nevertheless, favors the idea that this version of <title xml:lang="en">The Aparimitāyur­jñāna
                             Sūtra</title> was indeed translated and introduced to Tibet by Puṇyasambhava and Patsap
@@ -2494,7 +2497,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">anāthapiṇḍada</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mgon med zas sbyin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A wealthy merchant in the town of Śrāvastī, who became a patron of
                                 the Buddha Śākyamuni. He bought Prince Jeta’s Park, the Jetavana, to be the Buddha’s
                                 first monastery, a place where the monks could stay during the monsoon. Although his
@@ -2787,7 +2790,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākyamuni</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya thub pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ་ཐུབ་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the buddha of our era, the fourth buddha of this
                                 Bhadraka eon.</p>
                             </note>
@@ -2905,7 +2908,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jambudvīpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’dzam bu’i gling</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཛམ་བུའི་གླིང་།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the southern continent in Buddhist cosmology, which can
                                 mean the known world of humans or, more specifically, the Indian subcontinent. In the
                                     <title xml:lang="Sa-Ltn">Karaṇḍavyūha Sūtra</title>, Sri Lanka is described as being
