--- a/translations/kangyur/placeholders/091-039_toh642-the_hundred_and_eight_names_of_manjusri.xml
+++ b/translations/kangyur/placeholders/091-039_toh642-the_hundred_and_eight_names_of_manjusri.xml
@@ -5,23 +5,24 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Hundred and Eight Names of Mañjuśrī</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mañjuśrīnāmāṣṭaśatakam</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Mañjuśrīnāmāṣṭaśatakam</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'jam dpal gyi mtshan brgya rtsa brgyad pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamañjuśrīnāmāṣṭaśatakam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamañjuśrīnāmāṣṭaśatakam</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'jam dpal gyi mtshan brgya rtsa brgyad pa zhes bya ba/</title>
-                <author role="translatorMain" xml:id="UT22084-091-039-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-039-1">Tibetan Classics Translators Guild of New York</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-091-039-2">Geshe Lozang Jamspal</consultant>
                 <author role="translatorEng" xml:id="UT22084-091-039-3">David Mellins</author>
                 <author role="translatorEng" xml:id="UT22084-091-039-4">Kaia Fischer</author>
                 <editor role="projectEditor" xml:id="UT22084-091-039-5">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-039-6">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-039-34">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-039"/>
                 <date/>
             </publicationStmt>
@@ -99,6 +100,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-06T08:54:04.35Z" type="text-version" status="0.0.13" xml:id="UT22084-091-039-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-04T14:46:04.893Z" type="text-version" status="0.0.14" xml:id="UT22084-091-039-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-30T14:11:30.448Z" type="translation-status" status="2.b" xml:id="UT22084-091-039-36">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-30T14:11:30.448Z" type="text-version" status="0.0.15" xml:id="UT22084-091-039-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
