--- a/translations/kangyur/placeholders/091-036_toh639,879-the_incantation_of_the_one_hundred_and_eight_names_of_youthful_manjusri.xml
+++ b/translations/kangyur/placeholders/091-036_toh639,879-the_incantation_of_the_one_hundred_and_eight_names_of_youthful_manjusri.xml
@@ -5,27 +5,28 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī-mantra of the One Hundred and Eight Names of Youthful Mañjuśrī</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mañjuśrīkumāra­bhūtāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Mañjuśrīkumāra­bhūtāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'jam dpal gzhon nur gyur pa'i mtshan brgya rtsa brgyad pa'i gzungs sngags/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇīmantra of the Hundred and Eight Names of Youthful Mañjuśrī</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamañjuśrī­kumārabhūtāṣṭottara­śatakanāma dhāraṇī­mantrasahitam</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamañjuśrīkumāra­bhūtāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">mañjuśrī­kumārabhūtāṣṭottara­śatakanāma dhāraṇī­mantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamañjuśrī­kumārabhūtāṣṭottara­śatakanāma dhāraṇī­mantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamañjuśrīkumāra­bhūtāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Mañjuśrī­kumārabhūtāṣṭottara­śatakanāma dhāraṇī­mantrasahitam</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'jam dpal gzhon nur gyur pa'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'jam dpal gzhon nur 'gyur pa'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <author role="translatorMain" xml:id="UT22084-091-036-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-036-1">Tibetan Classics Translators Guild of New York</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-091-036-2">Geshe Lozang Jamspal</consultant>
                 <author role="translatorEng" xml:id="UT22084-091-036-3">Kaia Fischer</author>
                 <author role="translatorEng" xml:id="UT22084-091-036-4">David Mellins</author>
                 <editor role="projectEditor" xml:id="UT22084-091-036-5">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-036-6">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-036-33">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-036"/>
                 <date/>
             </publicationStmt>
@@ -109,6 +110,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-06T08:51:35.162Z" type="text-version" status="0.0.13" xml:id="UT22084-091-036-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-04T14:45:39.715Z" type="text-version" status="0.0.14" xml:id="UT22084-091-036-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-30T14:21:59.471Z" type="translation-status" status="2.a" xml:id="UT22084-091-036-35">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-30T14:21:59.471Z" type="text-version" status="0.0.15" xml:id="UT22084-091-036-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
