--- a/translations/kangyur/placeholders/091-002_toh605,956-the_incantation_of_vajrabhairava.xml
+++ b/translations/kangyur/placeholders/091-002_toh605,956-the_incantation_of_vajrabhairava.xml
@@ -17,13 +17,14 @@
                 <editor role="projectEditor" xml:id="UT22084-091-002-5">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-002-6">Laura Goetz</editor>
                 <editor role="projectEditor" xml:id="UT22084-091-002-31">Rory Lindsay</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-002-42">Wiesiek Mical</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-002"/>
                 <date/>
             </publicationStmt>
@@ -110,6 +111,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-13T11:04:20.884Z" type="text-version" status="0.0.13" xml:id="UT22084-091-002-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T11:05:01.303Z" type="text-version" status="0.0.14" xml:id="UT22084-091-002-43">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-30T14:36:32.723Z" type="translation-status" status="2.a" xml:id="UT22084-091-002-44">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-30T14:36:32.723Z" type="text-version" status="0.0.15" xml:id="UT22084-091-002-45">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
