--- a/translations/kangyur/placeholders/003-007_toh1-12-chapter_12_on_types_of_person.xml
+++ b/translations/kangyur/placeholders/003-007_toh1-12-chapter_12_on_types_of_person.xml
@@ -5,17 +5,18 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Chapter 12: On Types of Person</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pudgalavastu</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Pudgalavastu</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gang zag gi gzhi/</title>
-                <author role="translatorMain" ref="eft:team-67"/>
-                <author role="translatorEng" ref="eft:person-384">Ven. Gyalten Jigdrel</author>
+                <author role="translatorMain" xml:id="UT22084-003-007-1"/>
+                <author role="translatorEng" xml:id="UT22084-003-007-2">Ven. Gyalten Jigdrel</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-003-007"/>
                 <date/>
             </publicationStmt>
@@ -30,11 +31,45 @@
                     <idno source-id="O1JC114941JC12916" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-29T11:50:50.325Z" user="admin">29/03/2022 11:50:50</note>
-            <note type="updated" update="translation-status" value="0" date-time="2019-08-21T03:55:43.646Z" user="john"/>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-10T13:07:35.56Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-10T13:07:35.56Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="3" date-time="2022-03-29T11:50:07.803Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-03-29T11:50:07.803Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-03-29T11:50:31.19Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-03-29T11:50:46.827Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2019-08-21T03:55:43.646Z" type="translation-status" status="0" xml:id="UT22084-003-007-3">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-003-007-4">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-10T13:07:35.56Z" type="translation-status" status="4" xml:id="UT22084-003-007-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-10T13:07:35.56Z" type="text-version" status="0.0.2" xml:id="UT22084-003-007-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-29T11:50:07.803Z" type="translation-status" status="3" xml:id="UT22084-003-007-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-29T11:50:07.803Z" type="text-version" status="0.0.3" xml:id="UT22084-003-007-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-29T11:50:31.19Z" type="text-version" status="0.0.4" xml:id="UT22084-003-007-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-29T11:50:46.827Z" type="text-version" status="0.0.5" xml:id="UT22084-003-007-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-22T12:16:05.521Z" type="text-version" status="0.0.6" xml:id="UT22084-003-007-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-003-007-12">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-31T15:58:19.411Z" type="translation-status" status="2.h" xml:id="UT22084-003-007-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-31T15:58:19.411Z" type="text-version" status="0.0.8" xml:id="UT22084-003-007-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
