--- a/translations/kangyur/placeholders/101-079_toh1024-the_incantation_for_calming_suffering.xml
+++ b/translations/kangyur/placeholders/101-079_toh1024-the_incantation_for_calming_suffering.xml
@@ -5,18 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Calming Suffering</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sarvaduḥkhapraśamanakaradhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Sarvaduḥkhapraśamanakaradhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bsdug bsngal zhi byed gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">sarva­duḥkhapraśamanakara­nāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Sarva­duḥkhapraśamanakara­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bsdug bsngal thams cad rab tu zhi bar byed pa zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <author role="translatorMain" xml:id="UT22084-101-079-1"/>
+                <author role="translatorEng" xml:id="UT22084-101-079-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-101-079-3">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-101-079"/>
                 <date/>
             </publicationStmt>
@@ -31,9 +33,42 @@
                     <idno source-id="O1JC114941JC12787" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-23T14:32:28.923Z" user="admin">23/03/2023 14:32:28</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:58:31.89Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:58:31.89Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:58:54.867Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T13:05:14.522Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-25T13:05:14.522Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-23T14:32:24.694Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-23T14:32:24.694Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-04-13T12:58:31.89Z" type="translation-status" status="3" xml:id="UT22084-101-079-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-13T12:58:31.89Z" type="text-version" status="0.0.1" xml:id="UT22084-101-079-5">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-13T12:58:54.867Z" type="text-version" status="0.0.2" xml:id="UT22084-101-079-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-25T13:05:14.522Z" type="translation-status" status="2.h" xml:id="UT22084-101-079-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-25T13:05:14.522Z" type="text-version" status="0.0.3" xml:id="UT22084-101-079-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-23T14:32:24.694Z" type="translation-status" status="2.g" xml:id="UT22084-101-079-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-23T14:32:24.694Z" type="text-version" status="0.0.4" xml:id="UT22084-101-079-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-23T14:32:57.546Z" type="text-version" status="0.0.5" xml:id="UT22084-101-079-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-101-079-12">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-01T10:31:10.377Z" type="translation-status" status="2.h" xml:id="UT22084-101-079-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-01T10:31:10.377Z" type="text-version" status="0.0.7" xml:id="UT22084-101-079-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
