--- a/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
+++ b/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
@@ -15,11 +15,11 @@
                 <sponsor xml:id="UT22084-087-010-3">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-087-010"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +85,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-23T14:49:59.07Z" type="text-version" status="0.0.11" xml:id="UT22084-087-010-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-01T15:33:16.64Z" type="translation-status" status="2.e" xml:id="UT22084-087-010-24">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-01T15:33:16.64Z" type="text-version" status="0.0.12" xml:id="UT22084-087-010-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
