--- a/translations/tengyur/placeholders/151-002_toh4105-vinayasamgraha.xml
+++ b/translations/tengyur/placeholders/151-002_toh4105-vinayasamgraha.xml
@@ -10,24 +10,25 @@
                 <title xml:lang="en" type="mainTitle">A Summary of the Monastic Disciplines</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-151-002"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh4105" type="text">
                     <ref>Toh 4105</ref>
                     <biblScope>ff. 88v-268r</biblScope>
-                    <author ref="eft:entity-18511" xml:lang="Sa-Ltn">Viśeṣamitra</author>
-                    <author role="translatorTib" ref="eft:entity-18512" xml:lang="Sa-Ltn">Lo­tsā­ba Vairocana</author>
-                    <author role="translatorTib" ref="eft:entity-32178" xml:lang="Sa-Ltn">Śākyaprabha</author>
-                    <author role="translatorTib" ref="eft:entity-17468" xml:lang="Sa-Ltn">Śīlendrabodhi</author>
-                    <editor role="reviser" ref="eft:entity-18510" xml:lang="Bo-Ltn">lo tsA ba shAkya'i dge slong shAkya bshes gnyen</editor>
-                    <editor role="reviser" ref="eft:entity-17884" xml:lang="Sa-Ltn">Jñānaśrībhadra</editor>
-                    <editor role="reviser" ref="eft:entity-17940" xml:lang="Sa-Ltn">Jayaśrījñāna</editor>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-151-002-1">Viśeṣamitra</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-151-002-2">Lo­tsā­ba Vairocana</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-151-002-3">Śākyaprabha</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-151-002-4">Śīlendrabodhi</author>
+                    <editor role="reviser" xml:lang="Bo-Ltn" xml:id="UT23703-151-002-5">lo tsA ba shAkya'i dge slong shAkya bshes gnyen</editor>
+                    <editor role="reviser" xml:lang="Sa-Ltn" xml:id="UT23703-151-002-6">Jñānaśrībhadra</editor>
+                    <editor role="reviser" xml:lang="Sa-Ltn" xml:id="UT23703-151-002-7">Jayaśrījñāna</editor>
                     <location work="UT23703" count-pages="361">
                         <volume number="151" start-page="175" end-page="535"/>
                     </location>
@@ -36,12 +37,24 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh2"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-28T13:33:14.573Z" user="andre">28/01/2022 13:33:14</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-4104-4149_PH_new_v2.4.xml" date-time="2021-11-02T14:17:45.617Z" user="admin"/>
-            
-    <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-28T13:33:12.499Z" user="andre">Auto (entity-merge-attribution)</note>
-</notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T14:17:45.617Z" type="import" xml:id="UT23703-151-002-8" source="tengyur-data-4104-4149_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#andre" when="2022-01-28T13:33:12.499Z" type="text-version" status="0.0.1" xml:id="UT23703-151-002-9">
+                    <desc>Auto (entity-merge-attribution)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT23703-151-002-10">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-02T08:10:55.063Z" type="translation-status" status="3" xml:id="UT23703-151-002-11">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-02T08:10:55.063Z" type="text-version" status="0.0.3" xml:id="UT23703-151-002-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
