--- a/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, The Mother of the Demons</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">grahamātṛkādhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Grahamātṛkādhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum gyi gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryagrahamātṛkānāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryagrahamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gza' rnams kyi yum zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <author role="translatorMain" xml:id="UT22084-091-057-1"/>
+                <author role="translatorEng" xml:id="UT22084-091-057-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-091-057"/>
                 <date/>
             </publicationStmt>
@@ -40,14 +41,33 @@
                     <idno source-id="O1JC114941JC12760" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-15T13:09:17.254Z" user="admin">15/05/2023 13:09:17</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:28:31.295Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:28:31.295Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:28:57.773Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-15T13:09:12.944Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-05-15T13:09:12.944Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-16T09:28:31.295Z" type="translation-status" status="3" xml:id="UT22084-091-057-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:28:31.295Z" type="text-version" status="0.0.1" xml:id="UT22084-091-057-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:28:57.773Z" type="text-version" status="0.0.2" xml:id="UT22084-091-057-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-15T13:09:12.944Z" type="translation-status" status="2.h" xml:id="UT22084-091-057-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-15T13:09:12.944Z" type="text-version" status="0.0.3" xml:id="UT22084-091-057-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-091-057-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-05T14:09:50.712Z" type="translation-status" status="2.g" xml:id="UT22084-091-057-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-05T14:09:50.712Z" type="text-version" status="0.0.5" xml:id="UT22084-091-057-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
