--- a/translations/kangyur/translations/090-010_toh566-a_guide_to_noble_maricis_mandala_rites.xml
+++ b/translations/kangyur/translations/090-010_toh566-a_guide_to_noble_maricis_mandala_rites.xml
@@ -31,7 +31,7 @@
         <editor role="finalReviewer" xml:id="UT22084-090-010-670">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -161,6 +161,9 @@
                 </change>
                 <change who="#sameer" when="2024-02-05T14:08:27.142Z" type="text-version" status="1.0.0" xml:id="UT22084-090-010-677">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#sameer" when="2024-02-05T14:14:37.226Z" type="text-version" status="1.0.1" xml:id="UT22084-090-010-678">
+                    <desc>User set version to 1.0.1</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
