--- a/translations/kangyur/translations/090-010_toh566-a_guide_to_noble_maricis_mandala_rites.xml
+++ b/translations/kangyur/translations/090-010_toh566-a_guide_to_noble_maricis_mandala_rites.xml
@@ -31,7 +31,7 @@
         <editor role="finalReviewer" xml:id="UT22084-090-010-670">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -165,6 +165,9 @@
                 <change who="#sameer" when="2024-02-05T14:14:37.226Z" type="text-version" status="1.0.1" xml:id="UT22084-090-010-678">
                     <desc>User set version to 1.0.1</desc>
                 </change>
+                <change who="#celso" when="2024-02-05T15:41:00.612Z" type="text-version" status="1.0.2" xml:id="UT22084-090-010-679">
+                    <desc>moved first folio ref in markup</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -295,11 +298,9 @@
         <head type="sub" tid="18">A Ritual Manual Consisting of Seven Hundred Essential Lines from the Twelve-Thousand Line Tantra of Mārīcī’s
           Arising</head>
         <div type="section" xml:id="UT22084-090-010-section-1">
-          <p tid="21">
-                        <ref cRef="F.165.b" type="folio" xml:id="UT22084-090-010-602"/>
-                    </p>
           <milestone unit="chunk" xml:id="UT22084-090-010-63"/>
-          <p tid="22">Homage to the goddess Mārīcī.<note place="end" xml:id="UT22084-090-010-64"> Following D and S <foreign xml:lang="Bo-Ltn" type="quote">lha mo ’od zer can la phyag ’tshal lo</foreign>. N<hi rend="subscript">E 1480/9</hi> reads <foreign xml:lang="Sa-Ltn" type="quote">namo vaj</foreign>[<foreign xml:lang="Sa-Ltn" type="quote">ra</foreign>]<foreign xml:lang="Sa-Ltn" type="quote">sattvāya</foreign>, preserving an alternative reading that would be translated “Homage to Vajrasattva.”</note>
+          <p tid="22">
+                        <ref cRef="F.165.b" type="folio" xml:id="UT22084-090-010-602"/> Homage to the goddess Mārīcī.<note place="end" xml:id="UT22084-090-010-64"> Following D and S <foreign xml:lang="Bo-Ltn" type="quote">lha mo ’od zer can la phyag ’tshal lo</foreign>. N<hi rend="subscript">E 1480/9</hi> reads <foreign xml:lang="Sa-Ltn" type="quote">namo vaj</foreign>[<foreign xml:lang="Sa-Ltn" type="quote">ra</foreign>]<foreign xml:lang="Sa-Ltn" type="quote">sattvāya</foreign>, preserving an alternative reading that would be translated “Homage to Vajrasattva.”</note>
           </p>
           <lb/>
           <milestone unit="chunk" xml:id="UT22084-090-010-66"/>
