--- a/translations/tengyur/placeholders/046-006_toh1922-krsnayamaritantrapanjika.xml
+++ b/translations/tengyur/placeholders/046-006_toh1922-krsnayamaritantrapanjika.xml
@@ -8,14 +8,15 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Kṛṣṇa­yamāri­tantra­pañjikā</title>
                 <title xml:lang="bo" type="mainTitle">གཤིན་རྗེ་དགྲ་ནག་པོའི་རྒྱུད་ཀྱི་དཀའ་འགྲེལ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">gshin rje dgra nag po'i rgyud kyi dka' 'grel/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <author role="translatorMain" xml:id="UT23703-046-006-1"/>
+                <author role="translatorEng" xml:id="UT23703-046-006-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-046-006"/>
                 <date/>
             </publicationStmt>
@@ -23,9 +24,9 @@
                 <bibl key="toh1922" type="text">
                     <ref>Toh 1922</ref>
                     <biblScope>ff. 312v-337r</biblScope>
-                    <author ref="eft:entity-18026" xml:lang="Sa-Ltn">Padmapāṇi</author>
-                    <author role="translatorTib" ref="eft:entity-17657" xml:lang="Bo-Ltn">bod kyi lo tsa ba rong zom chos kyi bzang po</author>
-                    <author role="translatorTib" ref="eft:entity-18025" xml:lang="Sa-Ltn">Parameśvara</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-046-006-3">Padmapāṇi</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-046-006-4">bod kyi lo tsa ba rong zom chos kyi bzang po</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-046-006-5">Parameśvara</author>
                     <location work="UT23703" count-pages="50">
                         <volume number="46" start-page="624" end-page="673"/>
                     </location>
@@ -33,13 +34,30 @@
                     <idno source-id="O1JC76301JC8495" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-31T09:18:59.85Z" user="admin">31/10/2022 09:18:59</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1918-2089_PH_new_v2.4.xml" date-time="2021-11-02T13:37:19.254Z" user="admin"/>
-                <note type="updated" update="translation-status" value="3" date-time="2022-10-31T09:18:15.551Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-10-31T09:18:15.551Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-31T09:18:54.269Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:37:19.254Z" type="import" xml:id="UT23703-046-006-6" source="tengyur-data-1918-2089_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2022-10-31T09:18:15.551Z" type="translation-status" status="3" xml:id="UT23703-046-006-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-31T09:18:15.551Z" type="text-version" status="0.0.1" xml:id="UT23703-046-006-8">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-31T09:18:54.269Z" type="text-version" status="0.0.2" xml:id="UT23703-046-006-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT23703-046-006-10">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T07:31:12.218Z" type="translation-status" status="2.h" xml:id="UT23703-046-006-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T07:31:12.218Z" type="text-version" status="0.0.4" xml:id="UT23703-046-006-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
