--- a/translations/tengyur/placeholders/046-006_toh1922-krsnayamaritantrapanjika.xml
+++ b/translations/tengyur/placeholders/046-006_toh1922-krsnayamaritantrapanjika.xml
@@ -8,15 +8,13 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Kṛṣṇa­yamāri­tantra­pañjikā</title>
                 <title xml:lang="bo" type="mainTitle">གཤིན་རྗེ་དགྲ་ནག་པོའི་རྒྱུད་ཀྱི་དཀའ་འགྲེལ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">gshin rje dgra nag po'i rgyud kyi dka' 'grel/</title>
-                <author role="translatorMain" xml:id="UT23703-046-006-1"/>
-                <author role="translatorEng" xml:id="UT23703-046-006-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="4"/>
                 <idno xml:id="UT23703-046-006"/>
                 <date/>
             </publicationStmt>
@@ -55,6 +53,15 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-06T07:31:12.218Z" type="text-version" status="0.0.4" xml:id="UT23703-046-006-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T07:32:18.715Z" type="text-version" status="0.0.5" xml:id="UT23703-046-006-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T07:32:35.753Z" type="translation-status" status="4" xml:id="UT23703-046-006-14">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T07:32:35.753Z" type="text-version" status="0.0.6" xml:id="UT23703-046-006-15">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
